<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pic Chat</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends list</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_label">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="signup_error_message"><![CDATA[Please make sure you enter a username,password & email address]]></string>
    <string name="signup_error_title">Ooops!!!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="login_error_message">Please fill username and password fields</string>
    <string name="login_error_title">Oops!!</string>
    <string name="empty_inbox_label">No new messages yet</string>
    <string name="empty_friends_label">No new Friends!! Add some</string>
    <string name="menu_edit_friends_label">Add Friends</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">We are sorry</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage. </string>
    <string name="general_error">Sorry there was an error!</string>
    <string name="video_file_size_warning">The selection video must be less than 10MB</string>
    <string name="error_opening_file">There was a problem with the selected </string>
    <string name="error_file_size_too_large">The selected file is more than 10MB! Select new one </string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first</string>
    <string name="select_recipients">Please select recipients below </string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select different file</string>
    <string name="error_selecting_file_title">We are sorry!</string>
    <string name="success_message">message is sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again!</string>
    <string name="title_activity_view_image">PicCHat</string>
    <string name="title_activity_inbox">InboxActivity</string>

    <string name="facebook_app_id">919783728135757</string>
    <string name="title_activity_demo">DemoActivity</string>

</resources>
