<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"

    >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
        <!--app:showAsAction="never" -->

    <item android:id="@+id/action_logout"
        android:title="@string/menu_logout_label"
        android:orderInCategory="100"  />
        <!--android:showAsAction="always"-->
         <!--/>-->
    <!--app:showAsAction="never" -->

    <item android:id="@+id/action_edit_friends"
        android:title="@string/menu_edit_friends_label" />
        <!--android:showAsAction="always"-->
        <!--/>-->
    <item android:id="@+id/action_camera"
        android:title="@string/menu_camera_label"
        android:icon="@drawable/ic_action_camera"
         android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <!-- app:showAsAction="always" -->
    <item android:id="@+id/action_message"
        android:title="Text"
        android:icon="@drawable/ic_action_chat"  />
        <!--android:showAsAction="always"-->
        <!--/>-->
    <!-- app:showAsAction="always" -->


</menu>


